# QBopomofo

./: CLAUDE.md  README.md
base/config/modes/: q-bopomofo.toml
base/engine/capi/include/: qbopomofo.h
base/engine/capi/src/: composing.rs
base/engine/src/: composing_session.rs  lib.rs  typing_mode.rs
base/engine/src/conversion/: chewing.rs
data-provider/: build.sh
data-provider/custom-data/: phrases.csv
mac/: Info.plist  build-app.sh  install.sh
mac/Sources/: BuildInfo.swift  CandidatePanel.swift  InputController.swift  PreferencesWindow.swift  main.swift
mac/TestApp/Sources/: ChewingBridge.swift  ContentView.swift
plans/: validator.md
win/: Cargo.toml
win/src/: com.rs  key_event.rs  lib.rs  text_service.rs
